--- a/css/style.css
+++ b/css/style.css
@@ -113,10 +113,6 @@ nav ul li {
   box-shadow: inset 0 0 30px #202020;
 }
 
-/* .pocetnaSlika { */
-  /* background-image: url("../img/cover.jpg"); */
-/* } */
-
 .pocetnaSlika {
   position: relative;
   background-image: url("../img/cover.jpg");
@@ -157,7 +153,7 @@ nav ul li {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); 
+  background: rgba(0, 0, 0, 0.8); 
 }
 
 #slider-text-programi {
@@ -173,7 +169,19 @@ nav ul li {
 
 .galerijaSlika {
   background-image: url("../img/cover-galerija.jpg");
+  position: relative;
 }
+
+.galerijaSlika::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+}
+
 
 .programiSlikaFooter {
   background-image: url("../img/cover-footer.jpg");
